--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-pandas==2.2.3
+setuptools==68.0.0
+numpy==1.23.5
+pandas==1.5.3
 plotly==5.9.0
+streamlit==1.18.0
 st_gsheets_connection==0.1.0
-streamlit==1.38.0
