--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# requirements.txt
+
+# Specify Python version indirectly
+python_version >= 3.9, <3.10
+
+# Package versions
 pandas==2.0.1
 plotly==5.13.1
 streamlit==1.38.0
