--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,5 @@
-# Install setuptools, wheel, and ensure distutils is installed
-setuptools==68.0.0
-wheel
-
-# Add other required packages
-numpy==1.23.5
-pandas==2.0.1
-plotly==5.13.1
-streamlit==1.38.0
-st_gsheets_connection==0.1.0
-
+gspread==6.1.3
+oauth2client==4.1.3
+pandas==2.2.3
+plotly==5.22.0
+streamlit==1.32.0
